--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,11 +17,14 @@ import { Icon } from 'astro-iconify'
 	</div>
 	<nav>
 		<div class="navbar bg-white">
-			<div class="w-full">
-				<div class="w-1/3">
+			<div class="w-full px-2">
+				<div class="w-1/2 flex items-center justify-start">
+					<a class="w-[40px] block"><img src="/img/esme-logo.svg" alt=""></a>
+				</div>
+				<div class="w-1/2 flex items-center justify-end">
 					<div class="drawer">
 						<input id="my-drawer" type="checkbox" class="drawer-toggle" />
-						<div class="drawer-content">
+						<div class="drawer-content flex items-center justify-end">
 							<label for="my-drawer" class="drawer-button"><Icon id="my-drawer" name="heroicons:bars-3" class="text-black icon-md" /></label>
 						</div>
 						<div class="drawer-side">
@@ -35,13 +38,10 @@ import { Icon } from 'astro-iconify'
 							</ul>
 						</div>
 					</div>
-				</div>
-				<div class="w-1/3 flex items-center justify-center">
-					<a class="w-[40px] block"><img src="/img/esme-logo.svg" alt=""></a>
-				</div>
-				<div class="w-1/3">
+				</div>				
+				<!-- <div class="w-1/3">
 					<a class="btn btn-greensea">Agendar cita</a>
-				</div>
+				</div> -->
 			</div>
 			<div class="navbar-center hidden lg:flex">
 			  <ul class="menu menu-horizontal px-1">
