--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,9 @@ import { Icon } from 'astro-iconify'
 ---
 
 <Layout title="Esme Studio">
+	<div class="section-btn-whatsapp">
+		<a class="btn-whatsapp"><Icon name="ic:baseline-whatsapp" /> <span class="hidden md:block">Agendar Cita</span></a>
+	</div>
 	<div id="alert-1" class="flex items-center p-4 text-white bg-greensea-custom" role="alert">
 		<Icon name="heroicons:calendar-date-range" class="icon-sm" />
 		<span class="sr-only">Info</span>
@@ -15,51 +18,90 @@ import { Icon } from 'astro-iconify'
 			<Icon name="heroicons:x-mark" class="text-white" />
 		</button>
 	</div>
-	<nav>
-		<div class="navbar bg-white">
-			<div class="w-full px-2">
-				<div class="w-1/2 flex items-center justify-start">
-					<a class="w-[40px] block"><img src="/img/esme-logo.svg" alt=""></a>
-				</div>
-				<div class="w-1/2 flex items-center justify-end">
-					<div class="drawer">
-						<input id="my-drawer" type="checkbox" class="drawer-toggle" />
-						<div class="drawer-content flex items-center justify-end">
-							<label for="my-drawer" class="drawer-button"><Icon id="my-drawer" name="heroicons:bars-3" class="text-black icon-md" /></label>
-						</div>
-						<div class="drawer-side">
-							<label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-							<ul class="menu bg-base-200 text-base-content min-h-full w-80 p-4 flex justify-center items-center">
-								<label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"><Icon name="heroicons:x-mark" class="text-3xl"/></label>
-								<li class="nav-item2"><a>Inicio</a></li>
-								<li class="nav-item2"><a>Sevicios</a></li>
-								<li class="nav-item2"><a>Quien soy</a></li>
-								<li class="nav-item2"><a>Galeria</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>				
-				<!-- <div class="w-1/3">
-					<a class="btn btn-greensea">Agendar cita</a>
-				</div> -->
+	<nav class="navbar bg-white sticky top-0 z-50">
+		<div class="w-full px-2">
+			<div class="w-1/2 flex items-center justify-start">
+				<a class="w-[40px] block"><img src="/img/esme-logo.svg" alt=""></a>
 			</div>
-			<div class="navbar-center hidden lg:flex">
-			  <ul class="menu menu-horizontal px-1">
-				<li><a>Item 1</a></li>
-				<li>
-				  <details>
-					<summary>Parent</summary>
-					<ul class="p-2">
-					  <li><a>Submenu 1</a></li>
-					  <li><a>Submenu 2</a></li>
-					</ul>
-				  </details>
-				</li>
-				<li><a>Item 3</a></li>
-			  </ul>
-			</div>			
+			<div class="w-1/2 flex items-center justify-end">
+				<div class="drawer">
+					<input id="my-drawer" type="checkbox" class="drawer-toggle" />
+					<div class="drawer-content flex items-center justify-end">
+						<label for="my-drawer" class="drawer-button"><Icon id="my-drawer" name="heroicons:bars-3" class="text-black icon-md" /></label>
+					</div>
+					<div class="drawer-side">
+						<label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
+						<ul class="menu bg-base-200 text-base-content min-h-full w-80 p-4 flex justify-center items-center">
+							<label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"><Icon name="heroicons:x-mark" class="text-3xl"/></label>
+							<li class="nav-item2"><a>Inicio</a></li>
+							<li class="nav-item2"><a>Sevicios</a></li>
+							<li class="nav-item2"><a>Quien soy</a></li>
+							<li class="nav-item2"><a>Galeria</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>				
+		</div>
+		<div class="navbar-center hidden lg:flex">
+			<ul class="menu menu-horizontal px-1">
+			<li><a>Item 1</a></li>
+			<li>
+				<details>
+				<summary>Parent</summary>
+				<ul class="p-2">
+					<li><a>Submenu 1</a></li>
+					<li><a>Submenu 2</a></li>
+				</ul>
+				</details>
+			</li>
+			<li><a>Item 3</a></li>
+			</ul>
 		</div>
 	</nav>
+	<section class="h-[550px]">
+		<div id="default-carousel" class="relative w-full h-full" data-carousel="slide">
+			<div class="relative h-full overflow-hidden md:h-96">
+				<div class="hidden duration-700 ease-in-out" data-carousel-item>
+					<img src="/img/carousel_1.webp" class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+					<div class="absolute inset-0 bg-black/65"></div>
+					<div class="absolute inset-0 flex items-center justify-center flex-col px-20 text-center">
+						<h1 class="text-white text-4xl font-bold">¡Renueva tu belleza con nosotros!</h1>
+						<p class="text-white textarea-md">Reserva tu cita y descrube nuestra magia.</p>
+						<a class="btn btn-greensea" href="">Conocer Servicios</a>
+					</div>
+				</div>
+				<div class="hidden duration-700 ease-in-out" data-carousel-item>
+					<img src="/img/carousel_2.jpeg" class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+					<div class="absolute inset-0 bg-black/65"></div>
+					<div class="absolute inset-0 flex items-center justify-center flex-col px-20 text-center">
+						<h1 class="text-white text-4xl font-bold">¡Renueva tu belleza con nosotros!</h1>
+						<p class="text-white textarea-md">Reserva tu cita y descrube nuestra magia.</p>
+						<a class="btn btn-greensea" href="">Conocer Servicios</a>
+					</div>
+				</div>
+			</div>
+			<div class="absolute z-30 flex -translate-x-1/2 bottom-5 left-1/2 space-x-3 rtl:space-x-reverse">
+				<button type="button" class="w-3 h-3 rounded-full" aria-current="true" aria-label="Slide 1" data-carousel-slide-to="0"></button>
+				<button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></button>
+			</div>
+			<button type="button" class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
+				<span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+					<svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
+					</svg>
+					<span class="sr-only">Previous</span>
+				</span>
+			</button>
+			<button type="button" class="absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
+				<span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+					<svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+					</svg>
+					<span class="sr-only">Next</span>
+				</span>
+			</button>
+		</div>
+	</section>
 </Layout>
 
 <style>
@@ -86,11 +128,9 @@ import { Icon } from 'astro-iconify'
 		padding-block: 20px;
 		font-size: 20px;
     }
-
     .nav-item2 a:hover {
         text-shadow: #f7f7f7 0px 0px 10px;
     }
-
     .nav-item2 a.active {
         text-shadow: #f7f7f7 0px 0px 10px;
     }
@@ -103,5 +143,22 @@ import { Icon } from 'astro-iconify'
 	.drawer-overlay {
 		width: 40px !important;
 		margin-bottom: 30px;
+	}
+	.section-btn-whatsapp {
+		position: fixed;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-size: 15px;
+		color: #fff;
+		bottom: 20px;
+		right: 0;
+		z-index: 9999;
+		background-color: #44C861;
+		padding: 10px;
+		border-radius: 999px 0px 0px 999px;
+	}
+	.btn-whatsapp {
+		width: 40px;
 	}
 </style>
