--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,5 +27,6 @@ import '@fontsource-variable/lexend';
 	html {
 		font-family: 'Lexend Variable';
 		background: #F5F5F7 !important;
+		scroll-behavior: smooth;
 	}
 </style>
